# rendering-learning

./: .gitignore  Cargo.toml  MODULE.bazel  README.md
book/: BUILD.bazel  main.cc
examples/: BUILD  hello_triangle.cc
game-of-questioning-life/: ,bazelrc  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MAC_SUPPORT.md  MODULE.bazel  README.md  TODO.md  bazel-bin  bazel-game-of-questioning-life  bazel-out  bazel-testlogs
game-of-questioning-life/game/: BUILD.bazel
game-of-questioning-life/game/include/: vfp_error.h  vfp_pipeline.h  vfp_render_pass.h  vfp_runfiles.h  vfp_vulkan_device.h
game-of-questioning-life/game/src/: main.c  vfp_error.c  vfp_pipeline.c  vfp_render_pass.c  vfp_runfiles.cc  vfp_vulkan_device.c
game-of-questioning-life/shaders/: BUILD.bazel
game-of-questioning-life/shaders/simple/: BUILD.bazel  simple.glsl.vert
glad/: BUILD
learn-opengl-cpp/: CMakeLists.txt
learn-wgpu-rust/: Cargo.toml
learn-wgpu-rust/src/: logging.rs  main.rs
notes/: build.md
raytracer_weekend_cpp/: CMakeLists.txt  main.cpp
rendering-learning/: .clangd  .gitignore  MODULE.bazel  README.md  spdlog_deps.bzl
rendering-learning/book/: main.cc
rendering-learning/examples/: BUILD  hello_log.cc  hello_triangle.cc
rendering-learning/src/: main.rs
