# BUILD
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    # Target hierarchy to inspect. //... means everything.
    targets = {
      "//...": "",
    },
    exclude_external_sources = True,
)
