[package]
name = "learn-wgpu-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time", "local-time"] }
time = { version = "0.3", features = ["macros", "formatting"] }
log = "0.4.29"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"