###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "rendering-learning")

# External Bazel modules from the Bazel Central Registry (BCR)
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "glfw", version = "3.4.0")
bazel_dep(name = "apple_support", version = "1.18.0")
bazel_dep(name = "glm", version = "1.0.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_requirements",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip_requirements")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
